    and used. Duplicated newlines will be removed on Windows. [Bug #5339] [Bug #11464]

* IPAddr
  * New methods are added:
    * IPAddr#prefix
    * IPAddr#loopback?
    * IPAddr#private? [Feature #11666]
    * IPAddr#link_local? [Feature #10912]
  * IPAddr now rejects invalid address mask. [Bug #13399]
  * IPAddr#ipv4_compat and #ipv4_compat? are deprecated. [Bug #13769]

* Net::HTTP
  * Add more HTTP status classes

  * Net::HTTP::STATUS_CODES is added as HTTP Status Code Repository [Misc #12935]

  * Net::HTTP#proxy_user and Net::HTTP#proxy_pass now reflects http_proxy
    environment variable if the system's environment variable is multiuser
    safe. [Bug #12921]

* Pathname
  * New method:
    * Pathname#glob [Feature #7360]

* Psych

  * Update to Psych 3.0.0.beta3.

* RbConfig
  * New constants:
    * RbConfig::LIMITS is added to provide the limits of C types.
      This is available when rbconfig/sizeof is required.

* Ripper
  * New method:
    * Ripper#state is added to tell the state of scanner. [Feature #13686]

  * New constants:
    * Ripper::EXPR_BEG and so on for Ripper#state.

* RDoc

  * Update to RDoc 6.0.0.beta3.
    * Replaced IRB based lexer with Ripper. It much improves the speed of generating document.
    * https://github.com/ruby/rdoc/pull/512

* Rubygems

  * Update to Rubygems 2.7.0.
    * http://blog.rubygems.org/2017/11/01/2.7.0-released.html
    * http://blog.rubygems.org/2017/08/27/2.6.13-released.html
    * http://blog.rubygems.org/2017/10/09/unsafe-object-deserialization-vulnerability.html

* SecureRandom
  * New methods:
    * SecureRandom.alphanumeric

* Set
  * Add Set#to_s as alias to #inspect [Feature #13676]
  * Add Set#=== as alias to #include? [Feature #13801]
  * Add Set#reset [Feature #6589]

* StringIO
  * StringIO#write accepts multiple arguments

* WEBrick

  * Add Server Name Indication (SNI) support [Feature #13729]

* Zlib
  * Zlib::GzipWriter#write accepts multiple arguments
