@@ -158,6 +158,9 @@ with all sufficient information, see the ChangeLog file or Redmine
   * IPAddr now rejects invalid address mask. [Bug #13399]
   * IPAddr#ipv4_compat and #ipv4_compat? are deprecated. [Bug #13769]
 
+* IRB
+  * Show source around `binding.irb` on session start
+
 * Net::HTTP
   * Add more HTTP status classes
 
